tree-nginx/portal-nginx-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-nginx            # 실제 디플로이 이름 그대로
spec:
  template:
    spec:
      volumes:
        - name: portal-nginx-index-volume
          configMap:
            name: portal-nginx-index
      containers:
        - name: portal-nginx-5c7f6c5ccd-lm4p6   # ★ 실제 컨테이너 이름으로 교체
          volumeMounts:
            - name: portal-nginx-index-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
