tree-nginx/portal-nginx.deploy.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-nginx    # helm으로 배포된 실제 이름과 동일해야 함
spec:
  template:
    spec:
      volumes:
        - name: portal-nginx-index-volume
          configMap:
            name: portal-nginx-index
      containers:
        - name: <NGINX_CONTAINER_NAME>   # ★ 여기 중요
          volumeMounts:
            - name: portal-nginx-index-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
